2008-11-07  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp : Check max-stack. If stack overflows, expand it.

        * compiler.scm: Added max-stack operand to LET_FRAME.

2008-11-05  higepon  <higepon@users.sourceforge.jp>

        * Implemented : Complex number normalization.

        * Implemented  +, -, *, /, >, >=, <, <=, = between Compnum and (Rational, Fixnum ,Flonum, Bignum and Compnum).

        * vm.cpp (setAfterTrigger1): Fixed stack bug.

2008-11-04  higepon  <higepon@users.sourceforge.jp>

        * Implemented = between Compnum and Compnum.

        * scripts/gen-test.scm: Changed for showing progress.

2008-11-03  higepon  <higepon@users.sourceforge.jp>

        * Compnum.h : Added.

        * Added normalization of Ratnum.

        * Added normalization of Bignum.

        * ArithmeticProcedures.h : Added fixnum?, fixnum-width, least-fixnum and greatest-fixnum.

        * Implemented +, -, *, /, >, >=, <, <=, = between Bignum and (Rational, Fixnum ,Flonum and Bignum).

        * Added Bignum.

2008-11-02  higepon  <higepon@users.sourceforge.jp>

        * Implemented +, -, *, /, >, >=, <, <=, = between Flonum and (Rational, Fixnum and Flonum).

        * Fixnum.h: Added Fixnum utility functions.

        * Added: (inexact ...).

        * Flonum.h: Added Flonum.

2008-11-01  higepon  <higepon@users.sourceforge.jp>

        * Arithmetic.cpp : Implemented +, -, *, /, >, >=, <, <=, = between Fixnum and Rational.

        * Rational.h : Added.

        * configure.ac: Added GMP lib check.

2008-10-31  higepon  <higepon@users.sourceforge.jp>

        * 0.0.7 released.

2008-10-30  higepon  <higepon@users.sourceforge.jp>

        * PortProcedures.cpp (statMtimeEx): Added stat-mtime.

        * scripts/pre-compile-r6rs.scm: Added.

2008-10-29  higepon  <higepon@users.sourceforge.jp>

        * tools/psyntax-r6rs/rev10_to_10/psyntax/expander.ss (psyntax): Updated to newest version which is found on IronScheme.
