@@ -42,6 +42,9 @@ public:
     Arithmetic();
     ~Arithmetic();
 
+    static Object exact(Object n);
+    static Object inexact(Object n);
+    static bool isExact(Object n);
     static bool isExactZero(Object n1);
     static Object add(Object number1, Object number2);
     static Object sub(Object number1, Object number2);
