@@ -1,6 +1,16 @@
 2008-11-07  higepon  <higepon@users.sourceforge.jp>
 
-        * VM.cpp : Check max-stack. If stack overflows, expand it.
+        * Added : nan?, finite? and infinite?
+
+        * Flonum.h : Added isNan.
+
+        * Added positive? and negative?
+
+        * Added exact.
+
+        * Added exact? and inexact?
+
+        * VM.cpp : Check max-stack on LET_FRAME. If stack overflows, expand it.
 
         * compiler.scm: Added max-stack operand to LET_FRAME.
 
